fixed typo and added more hints on submission
fixes

--- a/cidr2022/cfp.html
+++ b/cidr2022/cfp.html
@@ -187,10 +187,10 @@ href="https://cmt3.research.microsoft.com/CIDR2022">https://cmt3.research.micros
 	<p>
 Topics of interest include but are not limited to: database systems, storage management, transaction processing, cloud computing, massive data analysis, software service infrastructure, scalability and dependability, embedded and sensor databases, user interfaces, information integration and data cleaning architectures, information retrieval, declarative systems, data management in networks, benchmarking and experimental methodology, and databases for ML and ML for databases. We also welcome submissions on thought-provoking applications and emerging uses of data management technology.
 	<p> 
-		Submissions must be
+		Submissions are single-blind and must be
 		formatted using the ACM SIG style. (see  <a
 		href="https://www.acm.org/publications/proceedings-template">ACM
-		Template</a>), and must not exceed SIX pages (for papers
+		Template</a>), and must not exceed SIX pages including references (for papers
 		and demos) and ONE page (for abstracts) in length.
 		Videos can be submitted in HTML or MPEG format. Submissions will be reviewed by the program
 		committee which will make acceptance and rejection
