--- a/cidr2022/cfp.html
+++ b/cidr2022/cfp.html
@@ -126,7 +126,7 @@ CIDR 2013</a></li>
 <dl>
 	<dt>
 	
-<strong> August 27, 2021</strong>: Submission deadline for all
+<strong> August <strike>27</strike> 31, 2021</strong>: Submission deadline for all
 contributions
 	<dt>
 <strong>October 15, 2021</strong>: author notification for all contributions
