changed notification date

--- a/cidr2022/cfp.html
+++ b/cidr2022/cfp.html
@@ -129,7 +129,7 @@ CIDR 2013</a></li>
 <strong> August <strike>27</strike> 31, 2021</strong>: Submission deadline for all
 contributions
 	<dt>
-<strong>October 15, 2021</strong>: author notification for all contributions
+<strong>October <strike>15</strike> 22, 2021</strong>: author notification for all contributions
 
 <dt>
 	<strong>December 10, 2021</strong>: camera-ready deadline for
