updated venue information

--- a/cidr2022/index.html
+++ b/cidr2022/index.html
@@ -115,11 +115,11 @@ document.write('</div>');
 		<h2>General information</h2>
 		<p>
 		  The  Conference on Innovative Data Systems Research (CIDR) is a systems-oriented conference, complementary in its mission to the mainstream database conferences like SIGMOD and VLDB, emphasizing the systems architecture perspective. 
-		  CIDR was run every two years starting 2003, becoming the premier conference for practical data systems work. From 2020 on, the conference is organized every year, alternating between Amsterdam (even years) and the USA (odd years).  
-		  The Amsterdam venue of the conference is the Mövenpick hotel on the waterfront of the Amsterdam city center.
+		  CIDR was run every two years starting 2003, becoming the premier conference for practical data systems work. From 2020 on, the conference is organized every year, alternating between Amsterdam and the USA.  
+		  CIDR 2022 will be held at Chaminade Resort & Spa, a mountaintop hotel in Santa Cruz, California.
 		  <div style="background-color: #E6B0AA ; padding: 10px; border: 1px solid red;">
 
-Despite the COVID-19 pandemic, we hope CIDR 2022 can be a physical event. Updates will be posted around the Submission Deadline (Summer) and Paper Notification (Fall).</div>
+CIDR 2022 will be a physical event with live talks. We hope many participants with attend physically in Chaminade. We do request participants to be fully vaccinated against COVID-19. Alternatively, it will be possible to participate remotely via Zoom.</div>
 <p>
 		  	<p>
 		The CIDR program consists of single-track keynote, paper and demo presentations. CIDR encourages papers about innovative and risky data management system architecture ideas, systems-building experience and insight, resourceful experimental studies, and provocative position statements. Papers are encouraged to present novel approaches to data systems architecture and usage, to inspire discussions on the latest innovative and visionary ideas in the field. Authors are encouraged to submit their best systems work, and are limited to submit at most two papers.
