--- a/cidr2022/org.html
+++ b/cidr2022/org.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="Your description goes here" />
+	<meta name="description" content="CIDR 2022 Sponsors" />
 	<meta name="keywords" content="your,keywords,goes,here" />
 	<meta name="author" content="Your Name" />
 	<link rel="stylesheet" type="text/css" href="andreas02.css" media="screen,projection" />
@@ -83,8 +83,8 @@ For the period 2020-2025, we are grateful that the following sponsors are suppor
 <img  height="130" id="google" src="img/google.png" ></a>
 
 <p>
-<a href=" https://research.fb.com" >
-<img  height="130" id="facebook" src="img/facebook.png" style="background-color:white;" ></a>
+<a href="https://www.meta.com" >
+<img  height="130" id="meta" src="img/logo-Meta.png" style="background-color:white;" ></a>
 
 <p>
 <a href="https://www.microsoft.com">
