--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -71,7 +71,281 @@
 	  
           
 	 <h3>CIDR 2022 Program: TBD</h3>
-	 	
+	 <h3>CIDR 2022 Accepted Papers:</h3>
+	 
+	 <table >
+
+	 
+	 <tr ><b> DAPHNE: An Open and Extensible System
+  Infrastructure for Integrated Data Analysis Pipelines</b></tr>
+ <tr ><p> Patrick Damme (Graz University of
+  Technology &amp; Know-Center GmbH)*; Marius Birkenbach (KAI); Constantinos
+  Bitsakos (NTUA); Matthias Boehm (Graz University of Technology); Philippe
+  Bonnet (IT Univ Copenhagen, Denmark); Florina M. Ciorba (Technical University
+  of Dresden, Germany / University of Basel, Switzerland); Mark Dokter
+  (Know-Center GmbH); Pawel Dowgiallo (Intel); Ahmed Eleliemy (University of
+  Basel); Christian Faerber (Intel Corporation); Georgios Goumas (National
+  Technical University of Athens); Dirk Habich (TU Dresden); Niclas Hedam (IT
+  University of Copenhagen); Marlies Hofer (AVL List GmbH); Wenjun Huang
+  (German Aerospace Center); Kevin Innerebner (Graz University of Technology);
+  Vasileios Karakostas (National Technical University of Athens (NTUA)); Roman
+  Kern (KNOW-CENTER GmbH); Tomaž Kosar (University of Maribor); Alexander
+  Krause (TU Dresden); Daniel Krems (AVL List GmbH); Andreas Laber (Infineon);
+  Wolfgang Lehner (TU Dresden); Eric Mier (TU Dresden); Marcus Paradies (German
+  Aerospace Center); Bernhard Peischl (); Gabrielle Poerwawinata (University of
+  Basel); Stratos Psomadakis (ICCS/NTUA); Tilmann Rabl (HPI, University of
+  Potsdam); Piotr Ratuszniak (Intel Technology Poland); Pedro Silva (HPI,
+  University of Potsdam); Nikolai Skuppin (German Aerospace Center (DLR));
+  Andreas Starzacher (Infineon); Benjamin Steinwender (KAI GmbH); Ilin Tolovski
+  (Hasso Plattner Institute); Pinar Tozun (IT University of Copenhagen);
+  Wojciech Ulatowski (Intel); Yuanyuan Wang (Technical University of Munich
+  (TUM); German Aerospace Center (DLR)); Izajasz Wrosz (Intel); Aleš Zamuda
+  (University of Maribor); Ce Zhang (ETH); Xiaoxiang Zhu (Technical University
+  of Munich (TUM); German Aerospace Center (DLR))</tr>
+ <tr><b> Decoupled Transactions: Low Tail Latency
+  Online Transactions Atop Jittery Servers </b></tr>
+   <tr><p>Pat Helland (Salesforce)*</tr>
+  
+ <tr ><b>A Unified Transferable Model for
+  ML-Enhanced DBMS</b></tr>
+  <tr ><p>Ziniu Wu (Massachusetts Institute
+  of Technology)*; Pei Yu (中国科学技术大学); Peilun Yang (University of Technology
+  Sydney); Rong Zhu (Alibaba Group); Yuxing Han (ByteDance); Yaliang Li
+  (Alibaba Group); Defu Lian (University of Science and Technology of China); Kai
+  Zeng (Alibaba Group); Jingren Zhou (Alibaba Group)</tr>
+
+
+   <tr ><b>Farview: Disaggregated Memory with
+  Operator Off-loading for Database Engines</b></tr>
+ <tr ><p>Dario Korolija (ETH Zurich)*;
+  Dimitrios Koutsoukos (ETHZ); Kimberly Keeton (Unaffiliated); Konstantin Taranov (ETH Zurich); Dejan Milojicic
+  (Hewlett Packard Labs); Gustavo Alonso (ETHZ)</tr>
+ <tr ><b>Mach: A Pluggable Metrics Storage Engine
+  for the Age of Observability</b></tr>
+  <tr ><p>Franco Solleza (Brown University)*;
+  Andrew Crotty (Carnegie Mellon University); Suman Karumuri (Slack); Nesime
+  Tatbul (Intel Labs and MIT); Stan Zdonik (Brown University)</tr>
+  
+ <tr ><b>Are You Sure You Want to Use MMAP in Your
+  Database Management System?</b></tr>
+  <tr ><p>Andrew Crotty (Carnegie Mellon
+  University)*; Viktor Leis ( Friedrich-Alexander-Universität
+  Erlangen-Nürnberg); Andrew Pavlo (Carnegie Mellon University)</tr>
+
+ <tr ><b>One Model to Rule them All: Towards
+  Zero-Shot Learning for Databases</b></tr>
+ <tr ><p>Benjamin Hilprecht (TU Darmstadt)*;
+  Carsten Binnig (TU Darmstadt)</tr>
+ <tr ><b>Machine Learning, Linear Algebra, and
+  More: Is SQL All You Need?</b></tr>
+  <tr ><p>Mark Blacher (Friedrich Schiller
+  University Jena)*; Joachim Giesen (Friedrich Schiller University Jena); Sören
+  Laue (Friedrich Schiller University Jena / Data Assessment Solutions GmbH
+  Hannover); Julien Klaus (Friedrich Schiller University Jena); Viktor Leis (
+  Friedrich-Alexander-Universität Erlangen-Nürnberg)</tr>
+ <tr ><b>The 3D Hash Join: Building On Non-Unique
+  Join Attributes</b></tr>
+  <tr ><p>Daniel Flachs (University of
+  Mannheim)*; Magnus Mueller (University of Mannheim); Guido Moerkotte
+  (University of Mannheim)</tr>
+ <tr ><b>A Progress Report on DBOS: A
+  Database-oriented Operating System</b></tr>
+  <tr ><p>Qian Li (Stanford University)*;
+  Peter Kraft (Stanford University); Kostis Kaffes (Stanford University);
+  Athinagoras Skiadopoulos (Stanford University); Deeptaanshu Kumar (Carnegie
+  Mellon University); Jason Li (MIT); Michael Cafarella (MIT CSAIL); Goetz Graefe
+  (Google); Jeremy Kepner (MIT Lincoln Laboratory); Christos Kozyrakis
+  (Stanford University); Michael Stonebraker (MIT); Lalith Suresh (VMware
+  Research); Matei Zaharia (Stanford and Databricks)</tr>
+ <tr ><b>CompuCache: Remote Computable Caching
+  using Spot VMs</b></tr>
+  <tr ><p>Qizhen Zhang (University of
+  Pennsylvania)*; Philip A Bernstein (Microsoft Research); Daniel S Berger
+  (Microsoft Research); Badrish Chandramouli (Microsoft Research); Vincent Liu
+  (University of Pennsylvania); Boon Thau Loo (Univ. of Pennsylvania)</tr>
+ <tr ><b>Accelerating Python UDFs in Vectorized
+  Query Execution</b></tr>
+  <tr ><p>Steffen Kläbe (Actian Corp.)*;
+  Robert DeSantis (Actian Corp); Stefan Hagedorn (TU Ilmenau); Kai-Uwe Sattler
+  (TU Ilmenau)</tr>
+ <tr ><b>Darwin: Scale-In Stream Processing</b></tr>
+ <tr ><p>Lawrence Benson (Hasso Plattner
+  Institute, University of Potsdam)*; Tilmann Rabl (HPI, University of Potsdam)</tr>
+ <tr ><b>Knowledge Graph Exploration Systems: are
+  we lost?</b></tr>
+ <tr ><p>Matteo Lissandrini (Aalborg
+  University)*; Davide Mottin (Aarhus University); Katja Hose (Aalborg
+  University); Torben Bach Pedersen (Aalborg University)</tr>
+ <tr ><b>Interactive Video Data Cleaning and
+  Exploration]{Interactive Video Data Cleaning and Exploration (Vision Paper)</b></tr>
+  <tr ><p>Maureen Daum (University of
+  Washington)*; Enhao Zhang (University of Washington); Dong He (University of
+  Washington); Magdalena Balazinska (UW); Brandon Haynes (Microsoft); Ranjay
+  Krishna (Stanford University); Apryle Craig (University of Washington); Aaron
+  Wirsing (University of Washington)</tr>
+ <tr ><b>Self-Organizing Data Containers</b></tr>
+  <tr ><p>Samuel Madden (MIT)*; Jialin Ding
+  (MIT); Tim Kraska (MIT); Sivaprasad Sudhir (MIT); David E Cohen (Intel);
+  Timothy Mattson (Intel); Nesime Tatbul (Intel Labs and MIT)</tr>
+ <tr ><b>Augmenting Decision Making via
+  Interactive What-If Analysis</b></tr>
+  <tr ><p>Sneha Gathani (Sigma Computing)*;
+  Madelon Hulsebos (Sigma Computing); James Gale (Sigma Computing); Peter Haas
+  (University of Massachusetts Amherst); Cagatay Demiralp (Sigma Computing)</tr>
+ <tr ><b>Kyrix-J: Visual Discovery of Connected
+  Datasets in a Data Lake</b></tr>
+  <tr ><p>Wenbo Tao (MIT)*; Adam Sah
+  (Independent); Leilani Battle (University of Washington); Remco Chang (Tufts
+  University); Michael Stonebraker (MIT)</tr>
+ <tr ><b>Introducing a Query Acceleration Path for
+  Analytics in SQLite3</b></tr>
+  <tr ><p>Martin Prammer (University of
+  Wisconsin - Madison)*; Suryadev Sahadevan Rajesh (University of Wisconsin -
+  Madison); Junda Chen (University of Wisconsin-Madison); Jignesh Patel (UW -
+  Madison)</tr>
+ <tr ><b>Demonstration of GRainDB: A
+  Relational-core Graph-Relational DBMS</b></tr>
+  <tr ><p>Guodong Jin (Renmin University of
+  China)*; Nafisa Anzum (University of Waterloo); Semih Salihoglu (University
+  of Waterloo)</tr>
+ <tr ><b>Building a Shared Conceptual Model of
+  Complex, Heterogeneous Data Systems: A Demonstration</b></tr>
+  <tr ><p>Michael R Anderson (University of
+  Michigan); Yuze Lou (University of Michigan); Jiayun Zou (University of
+  Michigan); Michael Cafarella (MIT CSAIL)*; Sarah Chasins (University of
+  California, Berkeley); Doug Downey (Allen Institute for Artificial Intelligence);
+  Tian Gao (University of Michigan); Kexin Huang (University of Michigan);
+  Dinghao Shen (University of Michigan); Jenny Vo-Phamhi (University of
+  Michigan); Yitong Wang (University of Michigan); Yuning Wang (University of
+  Michigan); Anna Zeng (MIT)</tr>
+ <tr ><b>SSDs Striking Back: The Storage Jungle
+  and Its Implications to Persistent Indexes</b></tr>
+  <tr ><p>Kaisong Huang (Simon Fraser
+  University); Darien Imai (Simon Fraser University); Tianzheng Wang (Simon
+  Fraser University)*; Dong Xie (Penn State University)</tr>
+ <tr ><b>Workload-driven, Lazy Discovery of Data
+  Dependencies for Query Optimization</b></tr>
+  <tr ><p>Jan Kossmann (Hasso Plattner
+  Institute)*; Felix Naumann (Hasso Plattner Institute); Daniel Lindner (Hasso
+  Plattner Institute); Thorsten Papenbrock (Philipps University of Marburg)</tr>
+ <tr ><b>VIVA: An End-to-End System for
+  Interactive Video Analytics</b></tr>
+  <tr ><p>Daniel Kang (Stanford University)*;
+  Francisco Romero (Stanford University); Peter D Bailis (Stanford University);
+  Christos Kozyrakis (Stanford University); Matei Zaharia (Stanford and
+  Databricks)</tr>
+ <tr ><b>D-RDMA: Bringing Zero-Copy RDMA to
+  Database Systems</b></tr>
+  <tr ><p>André Ryser (University of
+  Fribourg); Alberto Lerner (University of Friborug)*; Alex Forencich
+  (University of California - San Diego); Philippe Cudre-Mauroux (Exascale
+  Infolab, Fribourg University)</tr>
+ <tr ><b>Boosting Efficiency of External Pipelines
+  by Blurring Application Boundaries</b></tr>
+  <tr ><p>Anna Herlihy (EPFL)*; Periklis
+  Chrysogelos (EPFL); Anastasia Ailamaki (EPFL)</tr>
+ <tr ><b>Memory Efficient Scheduling of Query
+  Pipeline Execution</b></tr>
+  <tr ><p>Lukas Landgraf (TU Dresden)*;
+  Wolfgang Lehner (TU Dresden); Florian Wolf (SAP SE); Alexander Boehm (SAP SE)</tr>
+ <tr ><b>Append is Near: Log-based Data Management
+  on ZNS SSDs</b></tr>
+  <tr ><p>Devashish R Purandare (University
+  of California, Santa Cruz)*; Peter Wilcox (UC Santa Cruz); Heiner Litz (UC
+  Santa Cruz ); Shel Finkelstein (University of California at Santa Cruz,
+  USA)</tr>
+	</table> 	
+	
+	<h3>CIDR 2022 Accepted Abstracts:</h3>
+	
+<table> 
+	 <tr ><b>
+	Screening Native Machine Learning Pipelines with ArgusEyes
+	</b></tr>
+	<tr ><p>
+	Sebastian Schelter (University of Amsterdam)*; Stefan Grafberger (University of Amsterdam); Shubha Guha (University of Amsterdam); Olivier Sprangers (University of Amsterdam); Bojan Karlas (ETH Zurich); Ce Zhang (ETH)
+	</tr>
+		 <tr ><b>
+Micro-architectural Analysis of OLAP Systems on Persistent Memory
+	</b></tr>
+	<tr ><p>
+Jie Liang Ang (National University of Singapore)*; Jefferson Chu (National University of Singapore); HIEU LE TRUNG (Bytedance); Jiajun Liu (NUS); Jiong He (Bytedance Ltd.); Qian Lin (ByteDance); Bingsheng He (National University of Singapore)
+	</tr>
+			 <tr ><b>
+Towards Observability for Machine Learning Pipelines
+	</b></tr>
+	<tr ><p>
+Shreya Shankar (University of California Berkeley)*; Aditya Parameswaran (University of California, Berkeley)
+	</tr>
+	<tr ><b>
+Runtime Encoding Execution in AnalyticDB: Efficient Query Executor for Cloud-native Database
+	</b></tr>
+	<tr ><p>
+Huan Feng (Alibaba Group)*; QIAOYI DING (ALIBABA); Zhe Chen (Alibaba); Liang Lin (Alibaba); Chaoqun Zhan (Alibaba Inc.)
+	</tr>
+	<tr ><b>
+DataFarm: Farm Your ML-based Query Optimizer’s Food! – Human-Guided Training Data Generation –
+	</b></tr>
+	<tr ><p>
+Robin P. van de Water (TU Berlin)*; Francesco Ventura (TU Berlin); Zoi Kaoudi (TU Berlin); Jorge Arnulfo Quiane Ruiz (TU Berlin); Volker Markl (Technische Universität Berlin)
+	</tr>
+	<tr ><b>
+Making Table Understanding Work in Practice
+	</b></tr>
+	<tr ><p>
+Madelon Hulsebos (University of Amsterdam)*; Sneha Gathani (Sigma Computing); James Gale (Sigma Computing); Isil Dillig (UT Austin); Paul Groth (University of Amsterdam); Cagatay Demiralp (Sigma Computing)
+	</tr>
+	<tr ><b>
+Data Management Opportunities for Foundation Models
+	</b></tr>
+	<tr ><p>
+Laurel Orr (Stanford University)*; Karan Goel (Stanford); Christopher Re (Stanford University)
+	</tr>
+	<tr ><b>
+Can Transfer Learning be used to build a Query Optimizer?
+	</b></tr>
+	<tr ><p>
+Yunjia Zhang (University of Wisconsin-Madison)*; Yannis Chronis (University of Wisconsin Madison); Jignesh Patel (UW - Madison); Theodoros Rekatsinas (University of Wisconsin-Madison)
+	</tr>
+<tr ><b>
+Towards NLP-Enhanced Data Profiling Tools
+	</b></tr>
+	<tr ><p>
+Immanuel Trummer (Cornell)*
+	</tr>
+	<tr ><b>
+A Network Use for Incomplete Knowledge Management
+	</b></tr>
+	<tr ><p>
+Anduo Wang (Temple University)*; Fangping Lan (Temple University)
+	</tr>
+	<tr ><b>
+Examples are All You Need: Iterative Data Discovery by Example in Data Lakes
+	</b></tr>
+	<tr ><p>
+El Kindi Rezig (MIT)*; Anshul Bhandari (National Institute of Technology Hamirpur); Anna Fariha (Microsoft); Benjamin Price (MIT Lincoln Laboratory); Allan Vanterpool (United States Air Force); Andrew Bowne (United States Air Force); Lindsey McEvoy (U.S. Air Force AI Accelerator (SAF/AQ)); Vijay Gadepally (MIT Lincoln Laboratory)
+	</tr>
+	<tr ><b>
+Amalur: Next-generation Data Integration in Data Lakes
+	</b></tr>
+	<tr ><p>
+Rihan Hai (TU Delft)*; Christos Koutras (TU Delft); Andra Ionescu (TU Delft); Asterios Katsifodimos (TU Delft)
+	</tr>
+		<tr ><b>
+Photon: A High-Performance Query Engine for the Lakehouse
+	</b></tr>
+	<tr ><p>
+Alexander Behm (Databricks); Shoumik Palkar (Databricks)*
+	</tr>
+	<tr ><b>
+Correctness in Stream Processing: Challenges and Opportunities
+	</b></tr>
+	<tr ><p>
+Caleb Stanford (University of Pennsylvania)*; Konstantinos Kallas (University of Pennsylvania); Rajeev Alur (University of Pennsylvania )
+	</tr>
+</table>
+
+
 
 	 
 </div>
