updated affiliation of Hulsebos

--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -293,7 +293,7 @@ Robin P. van de Water (TU Berlin)*; Francesco Ventura (TU Berlin); Zoi Kaoudi (T
 Making Table Understanding Work in Practice
 	</b></tr>
 	<tr ><p>
-Madelon Hulsebos (University of Amsterdam)*; Sneha Gathani (Sigma Computing); James Gale (Sigma Computing); Isil Dillig (UT Austin); Paul Groth (University of Amsterdam); Cagatay Demiralp (Sigma Computing)
+Madelon Hulsebos (Sigma Computing)*; Sneha Gathani (Sigma Computing); James Gale (Sigma Computing); Isil Dillig (UT Austin); Paul Groth (University of Amsterdam); Cagatay Demiralp (Sigma Computing)
 	</tr>
 	<tr ><b>
 Data Management Opportunities for Foundation Models
