graindb name change

--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -203,8 +203,7 @@
   Wisconsin - Madison)*; Suryadev Sahadevan Rajesh (University of Wisconsin -
   Madison); Junda Chen (University of Wisconsin-Madison); Jignesh Patel (UW -
   Madison)</tr>
- <tr ><b>Demonstration of GRainDB: A
-  Relational-core Graph-Relational DBMS</b></tr>
+ <tr ><b>GRainDB: A Relational-core Graph-Relational DBMS</b></tr>
   <tr ><p>Guodong Jin (Renmin University of
   China)*; Nafisa Anzum (University of Waterloo); Semih Salihoglu (University
   of Waterloo)</tr>
