background and video guidelines

--- a/cidr2022/cfp.html
+++ b/cidr2022/cfp.html
@@ -216,6 +216,17 @@ Topics of interest include but are not limited to: database systems, storage man
 Camera-ready papers need to follow the formatting instructions above. Additionally, they need to include the following copyright notice at the bottom left of the first page. This <a href="cidr-2022.cls" download> latex style file</a> and this <a href="pubform-CIDR2022.docx" download> Word template file </a> include the copyright notice. We recommend that you use it, which will display the following information:
 <p>
 <i>This article is published under a Creative Commons Attribution License(http://creativecommons.org/licenses/by/3.0/), which permits distribution and reproduction in any medium as well as allowing derivative works, provided that you attribute the original work to the author(s) and CIDR 2022. 12th Annual Conference on Innovative Data Systems Research (CIDR ’22). January 9-12, 2022, Chaminade, USA.</i>
+
+
+<h3>Video Submissions</h3>
+<p>
+While CIDR2022 will use live talks (15 minutes presentation + 5 minutes discussion for regular papers, and 4 minutes presentation + 1 minute discussion for abstracts) either given in-person or through zoom, we *additionally* request authors to submit a pre-recorded version of this talk. In case of regular talks, that version should be a bit shorter (or delivered faster..), and fit 12 minutes max. We will publish these talks on the <a href="https://www.youtube.com/channel/UCMSoRpgXRxhiSna6FkhTGeg/videos">YouTube channel of cidrdb</a>.
+<p>
+These videos need to be submitted with the camera-ready through CMT in the mp4 format, though the videos can be submitted later than the camera-ready. Authors have been emailed about this. 
+<p>
+Please record your talk with Zoom, and while doing so, please use as your video background this image: <a href="img/cidr2022-background.png">cidr2022-background.png</a>
+
+
 </div>
 
 <div id="footer">
