--- a/cidr2022/schedule.html
+++ b/cidr2022/schedule.html
@@ -111,8 +111,8 @@
         <span class="session-location">(Room: Santa Cruz)</span>
         <span class="session-time">8:45 - 10:00</span>
         <span class="session-presenter"> Chair: Fatma Özcan (Google)</span>
-		<span class="session-talk">The diverse challenges of video data management</span>
-        <span class="keynote-presenter"> <a class = "link" href="keynotespeakers.html#monday"> Magdalena Balazinska (UW) </a></span>
+		<span class="session-talk">TBD</span>
+        <span class="keynote-presenter"> <a class = "link" href="keynotespeakers.html#monday"> Matei Zaharia (Stanford and Databricks) </a></span>
     </div>
     
     <h3 class="time-slot" style="grid-row: time-1000;">10:00am</h3>
@@ -252,7 +252,8 @@
         <h3 class="session-title">Keynote 2</h3>
         <span class="session-location">(Room: Santa Cruz)</span>
         <span class="session-time">8:45 - 10:00</span>
-        <span class="keynote-presenter"> <a class = "link" href="keynotespeakers.html#monday"> TBD </a></span>
+        <span class="session-talk">The diverse challenges of video data management</span>
+        <span class="keynote-presenter"> <a class = "link" href="keynotespeakers.html#monday"> Magdalena Balazinska (UW) </a></span>
     </div>
 
   
