matei keynote info

--- a/cidr2022/keynotespeakers.html
+++ b/cidr2022/keynotespeakers.html
@@ -70,6 +70,83 @@
 	  
           
 	 <h3>CIDR 2022 Keynote Speakers: TBD</h3>
+	 	 <h2 id='tuesday'><span style='font-family:"Calibri",sans-serif'>Monday Keynote: 8:45 am
+-10:00 am</span></h2>
+
+<p class=MsoNormal><span style='font-family:"Arial",sans-serif;color:black;
+border:none windowtext 1.0pt;padding:0in'><img width=129 height=129
+id="Picture 2" src="img/matei-zaharia.jpeg"></span></p>
+
+<p class=MsoNormal><span style='font-size:16.0pt;line-height:115%'>Matei Zaharia, Stanford and Databricks</span></p>
+
+<!--<p class=MsoNormal></p><button class = "link" style="color:black"><a href="">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button></p>
+-->
+<p class=MsoNormal><span style='font-size:11.5pt;line-height:115%;color:#333333'>&nbsp;</span></p>
+
+
+<p class=MsoNormal style='margin-bottom:0in;line-height:normal'><b><span
+style='font-size:16.0pt'>Title:
+Lessons from Building Databricks<br></b>
+<br>
+</span></p>
+
+<b><span style='font-size:16.0pt;color:black'>Abstract:</span></b><span
+style='color:black'><br>
+This is a time of rapid change in both the requirements and technical opportunities for data platforms. In terms of requirements, organizations want to run ever more sophisticated analytics methods (e.g., data science and machine learning) on ever larger volumes of data. On the other hand, cloud storage has created the opportunity to query all of an organization’s data together for the first time, and open source has led to a broad software ecosystem that can exchange data through standard formats. I’ll describe how we leveraged these emerging requirements and opportunities in Databricks, a “lakehouse” platform designed to provide state-of-the-art performance, governance, and scalability for data in open formats that support a wide range of analytics tools. Databricks is used by over 5000 enterprises to process exabytes of data per day on over ten million VMs, with use cases from interactive SQL to real-time machine learning. I’ll describe some of the key things we learned about modern data users when designing the platform, as well as what it takes to operate this scale of cloud platform reliably.<br>
+
+</span>
+<b><span style='font-size:16.0pt;color:black'>Bio:</span></b><span
+style='color:black'><br>
+Matei Zaharia is a Cofounder and Chief Technologist at Databricks, as well as an Assistant Professor of Computer Science at Stanford. He started the Apache Spark project during his PhD at UC Berkeley, and has worked on other widely used open source data analytics and AI software, including Delta Lake and MLflow. At Stanford, Matei is a co-PI of the DAWN lab, working on infrastructure for machine learning, cloud computing, and privacy. Matei’s research was recognized through the 2014 ACM Doctoral Dissertation Award, an NSF CAREER Award, and the US Presidential Early Career Award for Scientists and Engineers (PECASE), the highest honor bestowed by the US government to early-career scientists and engineers.
+<br>
+
+<p class=MsoNormal style='margin-bottom:0in;line-height:normal'>&nbsp;</p>
+
+<h2><span style='font-family:"Calibri",sans-serif'>&nbsp;</span></h2>
+
+<h2 id='thursday'><span style='font-family:"Calibri",sans-serif'>Thursday Keynote: 9:00 am
+-10:00 am                        </span></h2>
+
+<p class=MsoNormal>
+<!--<span style='font-size:12.0pt;line-height:115%;font-family:
+"Times New Roman",serif;color:black;border:none windowtext 1.0pt;padding:0in'><img
+width=127 height=127 id="Picture 1"
+src="img/image002.jpg"></span>-->
+</p>
+
+<p class=MsoNormal><span style='font-size:16.0pt;line-height:115%'>Magdalena Balazinska, University of Washington</span></p>
+
+<!-- <p class=MsoNormal><button class = "link" style="color:black"><a href="">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button></p>
+-->
+<p class=MsoNormal><span style='font-size:11.5pt;line-height:115%;color:#333333'>&nbsp;</span></p>
+
+<p class=MsoNormal style='margin-bottom:0in;line-height:normal'><b><span
+style='font-size:16.0pt'>Title: The Diverse Challenges of Video Data Management</span> </b></p>
+
+<p class=MsoNormal style='margin-bottom:0in'><b><span style='font-size:16.0pt;
+line-height:115%;color:black'>&nbsp;</span></b></p>
+
+<b><span style='font-size:16.0pt;color:black'>Abstract:</span></b><span
+style='color:black'><br>
+TBD</br>
+
+<br>
+
+
+<b><span style='font-size:16.0pt;color:black'>Bio:</span></b><span
+style='color:black'><br>TBD</br>
+
+<p class=MsoNormal style='margin-bottom:0in;line-height:normal'><span
+style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
+
+<p class=MsoNormal style='margin-bottom:0in;line-height:normal'><span
+style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
+
+<p class=MsoNormal style='margin-bottom:0in'><span style='font-size:11.5pt;
+line-height:115%;color:#333333'>&nbsp;</span></p>
+
+
+
 	 
 
 
