--- a/cidr2022/schedule.html
+++ b/cidr2022/schedule.html
@@ -111,7 +111,7 @@
         <span class="session-location">(Room: Santa Cruz)</span>
         <span class="session-time">8:45 - 10:00</span>
         <span class="session-presenter"> Chair: Fatma Özcan (Google)</span>
-		<span class="session-talk">TBD</span>
+		<span class="session-talk">Lessons from Building Databricks</span>
         <span class="keynote-presenter"> <a class = "link" href="keynotespeakers.html#monday"> Matei Zaharia (Stanford and Databricks) </a></span>
     </div>
     
@@ -251,8 +251,9 @@
     <div class="session session-3 track-1" style="grid-column: track-1; grid-row: time-0845 / time-1000;">
         <h3 class="session-title">Keynote 2</h3>
         <span class="session-location">(Room: Santa Cruz)</span>
+        <span class="session-presenter"> Chair: Peter Boncz (CWA)</span>
         <span class="session-time">8:45 - 10:00</span>
-        <span class="session-talk">The diverse challenges of video data management</span>
+        <span class="session-talk">Title: The Diverse Challenges of Video Data Management</span>
         <span class="keynote-presenter"> <a class = "link" href="keynotespeakers.html#monday"> Magdalena Balazinska (UW) </a></span>
     </div>
 
