--- a/cidr2022/keynotespeakers.html
+++ b/cidr2022/keynotespeakers.html
@@ -74,7 +74,7 @@
 -10:00 am</span></h2>
 
 <p class=MsoNormal><span style='font-family:"Arial",sans-serif;color:black;
-border:none windowtext 1.0pt;padding:0in'><img width=129 height=129
+border:none windowtext 1.0pt;padding:0in'><img width=129
 id="Picture 2" src="img/matei-zaharia.jpeg"></span></p>
 
 <p class=MsoNormal><span style='font-size:16.0pt;line-height:115%'>Matei Zaharia, Stanford and Databricks</span></p>
