--- a/cidr2022/keynotespeakers.html
+++ b/cidr2022/keynotespeakers.html
@@ -81,14 +81,15 @@ id="Picture 2" src="img/matei-zaharia.jpeg"></span></p>
 
 <!--<p class=MsoNormal></p><button class = "link" style="color:black"><a href="">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button></p>
 -->
-<p class=MsoNormal><span style='font-size:11.5pt;line-height:115%;color:#333333'>&nbsp;</span></p>
 
 
 <p class=MsoNormal style='margin-bottom:0in;line-height:normal'><b><span
 style='font-size:16.0pt'>Title:
-Lessons from Building Databricks<br></b>
-<br>
-</span></p>
+Lessons from Building Databricks
+</span></b><br></p>
+
+<p class=MsoNormal style='margin-bottom:0in'><b><span style='font-size:16.0pt;
+line-height:115%;color:black'>&nbsp;</span></b></p>
 
 <b><span style='font-size:16.0pt;color:black'>Abstract:</span></b><span
 style='color:black'><br>
@@ -104,24 +105,21 @@ Matei Zaharia is a Cofounder and Chief Technologist at Databricks, as well as an
 
 <h2><span style='font-family:"Calibri",sans-serif'>&nbsp;</span></h2>
 
-<h2 id='thursday'><span style='font-family:"Calibri",sans-serif'>Thursday Keynote: 9:00 am
+<h2 id='thursday'><span style='font-family:"Calibri",sans-serif'>Tuesday Keynote: 8:45 am
 -10:00 am                        </span></h2>
 
-<p class=MsoNormal>
-<!--<span style='font-size:12.0pt;line-height:115%;font-family:
-"Times New Roman",serif;color:black;border:none windowtext 1.0pt;padding:0in'><img
-width=127 height=127 id="Picture 1"
-src="img/image002.jpg"></span>-->
+<p class=MsoNormal><span style='font-family:"Arial",sans-serif;color:black;
+border:none windowtext 1.0pt;padding:0in'><img width=129id="Picture 1"
+src="img/magda_sm.jpeg"></span>
 </p>
 
 <p class=MsoNormal><span style='font-size:16.0pt;line-height:115%'>Magdalena Balazinska, University of Washington</span></p>
 
 <!-- <p class=MsoNormal><button class = "link" style="color:black"><a href="">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button></p>
 -->
-<p class=MsoNormal><span style='font-size:11.5pt;line-height:115%;color:#333333'>&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-bottom:0in;line-height:normal'><b><span
-style='font-size:16.0pt'>Title: The Diverse Challenges of Video Data Management</span> </b></p>
+style='font-size:16.0pt'>Title: The Diverse Challenges of Video Data Management</span> </b><br></p>
 
 <p class=MsoNormal style='margin-bottom:0in'><b><span style='font-size:16.0pt;
 line-height:115%;color:black'>&nbsp;</span></b></p>
