updated social distancing faq

--- a/cidr2022/registration.html
+++ b/cidr2022/registration.html
@@ -232,7 +232,11 @@ We require all people who attend physically to be fully vaccinated against COVID
 <p>
 (5) will there be an obligation for social distancing and mask wearing during the conference?
 <p>
-No. Strict social distancing and mask-wearing is currently not envisioned. However, CIDR 2022 will try to comply with the local recommendations and regulations for organising events, which may change over time. 
+CIDR 2022 will try to comply with the local recommendations and regulations for organising events, which may change over time.
+Strict social distancing will not be enforced, rather we ask the participants to socially distance were practical.
+We do ask the participants to wear a mask during the conference. We also ask participants to perform one self-test a day. 
+
+<b>(this answer has been updated, in light of the omicron surge)</b>
 <p>
 (6) are there limitations to the amount of authors who can register for physical attendance?
 <p>
