--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -163,7 +163,7 @@ p31-zhang.pdf
         <h3 class="session-title"><a href="#">Session 1: Modern Data Storage</a></h3>
         <span class="session-location">(Room: Santa Cruz)</span>
         <span class="session-time">10:30 - 10:50</span>
-        <span class="session-talk"><a class = "link" href="papers/p93-prandare.pdf" >Append is Near: Log-based Data Management on ZNS SSDs</a></span>
+        <span class="session-talk"><a class = "link" href="papers/p93-purandare.pdf" >Append is Near: Log-based Data Management on ZNS SSDs</a></span>
         <span class="session-presenter">Devashish R Purandare (University of California, Santa Cruz); Peter Wilcox (UC Santa Cruz); Heiner Litz (UC Santa Cruz ); Shel Finkelstein (University of California at Santa Cruz, USA)</span>
 		<span class="session-time">10:50 - 11:10</span>
 		<span class="session-talk"> <a class = "link" href="papers/p64-huang.pdf">SSDs Striking Back: The Storage Jungle and Its Implications to Persistent Indexes</a></span>
