--- a/cidr2022/registration.html
+++ b/cidr2022/registration.html
@@ -246,7 +246,7 @@ In this edition of CIDR, there are no such restrictions.
 
 <h3>DISCLAIMER</h3>
 <p>
-Travel to and physical participation in CIDR 2022 involves financial and health risks, including the last-minute cancellation of the event due to pandemic circumstances and the resulting non-refundable financial loss of incurred registration and travel cost; as well as the risk of attendees contracting COVID-19 with possible further financial and health consequences. The CIDR organisation offers the possibility of remote participation, that enables to avoid these risks associated with physical attendance. Physical attendance is a therefore the individual choice of the participants, over which the CIDR organisation (a non-profit academic entity) cannot assume responsibility. 
+Travel to and physical participation in CIDR 2022 involves financial and health risks, including the last-minute cancellation of the event due to pandemic circumstances and the resulting non-refundable financial loss of incurred registration and travel cost; as well as the risk of attendees contracting COVID-19 with possible further financial and health consequences. The CIDR organisation offers the possibility of remote participation, that enables to avoid these risks associated with physical attendance. Physical attendance is therefore the individual choice of the participants, over which the CIDR organisation (a non-profit academic entity) cannot assume responsibility. 
 </p>
 
 <h3>REGISTRATION</h3>
