Temporarily limit tweets to 3

--- a/cidr2022/officers.html
+++ b/cidr2022/officers.html
@@ -51,7 +51,7 @@
 				</ul>
 			
 						</li>
-						<a class="twitter-timeline" data-width="130" href="https://twitter.com/cidrdb?ref_src=twsrc%5Etfw">Tweets by cidrdb</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+						<a class="twitter-timeline" data-tweet-limit="3" data-width="130" href="https://twitter.com/cidrdb?ref_src=twsrc%5Etfw">Tweets by cidrdb</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 <!--
 			<li><a class="current" href="index2.html">2-column layout A</a></li>
