--- a/cidr2022/cfp.html
+++ b/cidr2022/cfp.html
@@ -100,7 +100,7 @@ CIDR 2013</a></li>
 <li><a href="print.html">Print stylesheet</a></li>
 
 	</ul>
-	<a class="twitter-timeline" data-width="130" href="https://twitter.com/cidrdb?ref_src=twsrc%5Etfw">Tweets by cidrdb</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<a class="twitter-timeline" data-tweet-limit="3" data-width="130" href="https://twitter.com/cidrdb?ref_src=twsrc%5Etfw">Tweets by cidrdb</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 -->
 
 	<!--
