--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -52,7 +52,7 @@
 					<li><a href="../cidr2003/index.html">CIDR 2003</a></li>
 				</ul>
 			</li>
-			<a class="twitter-timeline" data-width="130" href="https://twitter.com/cidrdb?ref_src=twsrc%5Etfw">Tweets by cidrdb</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			<a class="twitter-timeline" data-tweet-limit="3" data-width="130" href="https://twitter.com/cidrdb?ref_src=twsrc%5Etfw">Tweets by cidrdb</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
 		</ul>
