added registration close

--- a/cidr2022/registration.html
+++ b/cidr2022/registration.html
@@ -199,6 +199,10 @@
 				CIDR2022 will be held with all live talks for an in-person audience. We look forward to interacting with colleagues in a physical conference and hope that as many participants as possible will attend in Chaminade. We realise that due to the pandemic, physical participation for some participants may not be practical or even possible and, even if it were, remains an individual choice. Therefore it is also possible to attend and present at CIDR2022 live, virtually over Zoom. 
 <p>
 
+
+ <div style="background-color: #E6B0AA ; padding: 10px; border: 1px solid red;">
+
+All registration will be closed on January 8th noon pacific time. Registered participants will receive instructions via email on January 8th. </div>
 <p>
 The following registration options are available:
 <p>
