--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -83,7 +83,7 @@
     <h3 class="time-slot" style="grid-row: time-0930;">5:30pm</h3>
     <div class="session session-1 track-all" style="grid-column: track-1; grid-row: time-0900 / time-1100;">
         <h3 class="session-title">Dinner </h3>
-         <span class="session-location">(Room: Sunset Restraurant)</span>
+         <span class="session-location">(Room: Sunset Restaurant)</span>
     </div>
  </div>
      
