--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -309,6 +309,8 @@
 
             </div>
 
+            <h3 class="time-slot" style="grid-row: time-1030;">10:30am</h3>
+
             <div class="session session-4 track-1" style="grid-column: track-1; grid-row: time-1030 / time-1200;">
                 <h3 class="session-title"><a href="#">Session 4: Cloud Computing</a></h3>
                 <span class="session-location">(Room: Santa Cruz)</span>
