Update in person instructions

--- a/cidr2022/inperson-attendees.html
+++ b/cidr2022/inperson-attendees.html
@@ -185,9 +185,9 @@ We are pleased you will be joining us for CIDR 2022 at Chaminade Resort in Santa
 For private discussion, there is easy access to outdoor space just off the conference room and the dining room.
 <ul>
 <li>	Hotel staff will be masked.
-<li>	If you feel ill, we have a limited number of antigen test kits available. It is best to bring your own if you have them.</li>
+<li>	We ask all attendees to bring one antigen test for each day they are staying at the conference and perform a test every morning. We have a limited number of antigen test kits available in case you cannot obtain antigen tests yourself.</li>
 <li>	Contactless check-out:  no need to visit the front desk. Chaminade will email you your receipt.</li>
-<li>	Check-in: there is no contactless option for check-in. You’ll need to present some identification and your credit card to get your room key.</li>
+<li>	Check-in: there is no contactless option for check-in. You will need to present some identification and your credit card to get your room key.</li>
 
 </ul>
 <h3>Upon Arrival</h3>
