Add link description

--- a/cidr2022/inperson-attendees.html
+++ b/cidr2022/inperson-attendees.html
@@ -198,7 +198,7 @@ The resort comprises a main building with conference rooms, dining rooms and the
 <h3>Getting There</h3>
 	The resort is about 2 miles from the Pacific Ocean in the hills overlooking Santa Cruz.
 
-	Auto: The road to Santa Cruz (highway 17) can get congested so check traffic conditions (511.org or a phone app). If you are coming from San Francisco, highway 280 is a pleasant alternative to highway 101. For directions, see https://www.chaminade.com/about_santa_cruz_resort/santa_cruz_directions/   Be wary of alternative driving routes suggested by smart phone apps unless you are familiar with the roads.
+	Auto: The road to Santa Cruz (highway 17) can get congested so check traffic conditions (511.org or a phone app). If you are coming from San Francisco, highway 280 is a pleasant alternative to highway 101. For directions, see <a href="https://www.chaminade.com/about_santa_cruz_resort/santa_cruz_directions/">Chaminade's guide on directions</a>. Be wary of alternative driving routes suggested by smart phone apps unless you are familiar with the roads.
 
 <ul>
 	<li> Public Tranport: take a bus to Santa Cruz, then taxi or ride share (e.g., Uber/Lyft) to Chaminade. </li>
